Change some FAP function

--- a/exten/extensions_fap.conf
+++ b/exten/extensions_fap.conf
@@ -54,6 +54,7 @@ exten => *21,n,Set(DB(ABS/LMT/${MPEER})=${LMT})
 exten => *21,n(dlg2),GotoIf($["${OGCID}"=""]?dlg3)
 exten => *21,n,Set(DB(ABS/EXT/${EXT}/OGCID)=${OGCID})
 exten => *21,n(dlg3),Playback(abs-complogin)
+exten => *21,n,SayDigits(${EXT})
 exten => *21,n(nogo),Wait(1)
 exten => *21,n,Hangup
 ;すでにログイン済なら内線番号をトークバックして切断
