--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -31,6 +31,8 @@ exten => s,n(done),Return
 [macro-getexttech]
 exten => s,1,NoOp(内線テクノロジ取得)
 exten => s,n,NoOp(${PEER})
+;ピアが取得できていないケースではデフォルトで復帰(FAPの場合)
+exten => s,n,GotoIf($["${PEER}"=""]?dftt)
 ;PJSIP対応:複数ピアが&で指定された場合は最初のもののみ対象とし
 ;ABS内部ピア名だけ取り出し
 exten => s,n,Set(TPEER=${CUT(PEER,&,1)})
@@ -40,7 +42,7 @@ exten => s,n,Set(TPEER=${CUT(TPEER,/,1)})
 exten => s,n,Set(EXTTECH=${DB(ABS/LOCALTECH/${TPEER})})
 exten => s,n,GotoIf($["${EXTTECH}"!=""]?done)
 ;通常処理
-exten => s,n,Set(EXTTECH=${DB(ABS/EXTTECH)})
+exten => s,n(dftt),Set(EXTTECH=${DB(ABS/EXTTECH)})
 exten => s,n,GotoIf($["${EXTTECH}"!=""]?done)
 exten => s,n,Set(EXTTECH=PJSIP)
 exten => s,n(done),Return
@@ -74,6 +76,8 @@ exten => s,n,Return
 [macro-ext2peer]
 exten => s,1,NoOp(内線番号からピア取得)
 exten => s,n,Set(PEER=${DB(ABS/EXT/${EXT})})
+;ピアが取得できない場合は復帰
+exten => s,n,GotoIf($["${PEER}"=""]?done)
 ;G指定されている場合にはグループ
 exten => s,n,GotoIf($["${PEER:0:1}"="G"]?done)
 ;R指定されている場合にはリモート内線
