change some minor behavior

--- a/exten/extensions_customs.conf
+++ b/exten/extensions_customs.conf
@@ -3,11 +3,13 @@
 ;着信拒否した相手に対しての"いやがらせ"
 [torture-ignore]
 exten => s,1,NoOp(TORTURE)
+exten => s,n,Set(TIMEOUT(absolute)=180)
 exten => s,n,Ringing
 exten => s,n,Wait(10)
 exten => s,n,Answer()
-;exten => s,n,Playback(tt-monkeys)
-exten => s,n,Echo()
+exten => s,n,Playback(silence/1)
+exten => s,n,Playback(tt-abs-joke)
+exten => s,n,MusicOnHold
 exten => s,n,Hangup
 
 ;サンプル：着信拒否
