--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -559,6 +559,11 @@ exten => _X.,n(backm),Return
 ;メッセージングサポート
 [msgsender]
 exten => s,1,NoOp(メッセージ送信)
+exten => s,n,NoOp(${MESSAGE(from)})
+;Toの中身取り出し
+exten => s,n,Set(TTO=${MESSAGE(to)})
+exten => s,n,Set(DSTB=${CUT(TTO,@,2)})
+;Fromは内線番号を表示させたいので内線情報取得
 exten => s,n,Set(SRCX=${CUT(MESSAGE(from),:,2)})
 exten => s,n,Set(PEER=${CUT(SRCX,@,1)})
 exten => s,n,Gosub(macro-peer2ext,s,1)
@@ -566,8 +571,10 @@ exten => s,n,Set(MFROM=${EXT})
 exten => s,n,Set(EXT=${MTARGET})
 exten => s,n,Gosub(macro-ext2peer,s,1)
 exten => s,n,Gosub(macro-getexttech,s,1)
+;MESSAGE(to)を内線番号ではなくピアにセットしなおす
+exten => s,n,Set(DSTT=sip:${TPEER}@${DSTB})
 exten => s,n,Set(EXTTECH=${TOLOWER(${EXTTECH})})
-exten => s,n,MessageSend(${EXTTECH}:${PEER},${MFROM})
+exten => s,n,MessageSend(${EXTTECH}:${PEER},${MFROM},${DSTT})
 exten => s,n,Hangup
 
 ;ゴミ箱内線
