--- a/exten/asterisk.conf
+++ b/exten/asterisk.conf
@@ -6,3 +6,6 @@ astagidir => /var/lib/asterisk/agi-bin
 astspooldir => /var/spool/asterisk
 astrundir => /var/run
 astlogdir => /var/log/asterisk
+
+[options]
+transmit_silence = yes 
