FAP behavior change & bug fix

--- a/exten/extensions_fap.conf
+++ b/exten/extensions_fap.conf
@@ -92,6 +92,20 @@ exten => *23,n,Playback(abs-nologin)
 exten => *23,n,Hangup
 ;ログイン/ログアウト処理ここまで
 
+;ログイン情報確認
+exten => *22,1,NoOp(FAPログイン情報確認)
+exten => *22,n,Answer()
+exten => *22,n,Gosub(macro-whoami,s,1)
+exten => *22,n,GotoIf($["${ME}"=""]?lc1)
+exten => *22,n,Playback(abs-alreadylogin)
+exten => *22,n,SayDigits(${ME})
+exten => *22,n,Wait(1)
+exten => *22,n,Hangup
+exten => *22,n(lc1),NoOp(ログインしていない)
+exten => *22,n,Playback(abs-nologin)
+exten => *22,n,Hangup
+
+
 ;
 ;通常発信処理
 ;ここから先はログインしている端末のみに実行許可
@@ -116,3 +130,60 @@ exten => _*[05678]!,n,Goto(default,${EXTEN},1)
 exten => _*[05678]!,n(nogo),Answer
 exten => _*[05678]!,n,Playback(abs-nologin)
 exten => _*[05678]!,n,Hangup
+
+;
+;キー押下時挙動(1～9キー)
+;ログインされていない場合には即切断
+;**key処理が必要な場合には明示記述すること
+;
+;1-9スロット
+exten => _key[1-9],1,NoOp(FAPキー処理)
+exten => _key[1-9],n,Gosub(macro-whoami,s,1)
+exten => _key[1-9],n,GotoIf($["${ME}"=""]?nogo)
+exten => _key[1-9],n,Gosub(macro-extcheck,s,1)
+exten => _key[1-9],n,Set(KID=${EXTEN:3:1})
+exten => _key[1-9],n,Goto(key-handler,keyhandle,1)
+exten => _key[1-9],n(nogo),Hangup
+
+;
+;パークキー押下挙動
+;ログインされていない場合には即切断
+;
+exten => _Park[1-8],1,NoOp(FAPパーク:${EXTEN})
+exten => _Park[1-8],n,Gosub(macro-whoami,s,1)
+exten => _Park[1-8],n,GotoIf($["${ME}"=""]?nogo)
+exten => _Park[1-8],n,Goto(default,${EXTEN},1)
+exten => _Park[1-8],n(nogo),Hangup
+
+
+;FAP用hints
+;注意：フリーアドレス電話機は別なcontextで動作しているので hintsもそのcontext内に設けている
+;extensions_keysubsys.conf、extensions_fixedpark.confにも同じhintsがある
+;BLFキーに文字(key1やPark1など)が使えない電話機を使用する場合には数字hintを書くこと
+;キーシステム用hints
+;表示側(通常使用側)
+exten => key1,hint,Custom:KEYDSP1
+exten => key2,hint,Custom:KEYDSP2
+exten => key3,hint,Custom:KEYDSP3
+exten => key4,hint,Custom:KEYDSP4
+exten => key5,hint,Custom:KEYDSP5
+exten => key6,hint,Custom:KEYDSP6
+exten => key7,hint,Custom:KEYDSP7
+exten => key8,hint,Custom:KEYDSP8
+exten => key9,hint,Custom:KEYDSP9
+exten => key10,hint,Custom:KEYDSP10
+exten => key11,hint,Custom:KEYDSP11
+exten => key12,hint,Custom:KEYDSP12
+exten => key13,hint,Custom:KEYDSP13
+exten => key14,hint,Custom:KEYDSP14
+exten => key15,hint,Custom:KEYDSP15
+exten => key16,hint,Custom:KEYDSP16
+;パーク用hints
+exten => Park1,hint,park:811@parkedcalls
+exten => Park2,hint,park:821@parkedcalls
+exten => Park3,hint,park:831@parkedcalls
+exten => Park4,hint,park:841@parkedcalls
+exten => Park5,hint,park:851@parkedcalls
+exten => Park6,hint,park:861@parkedcalls
+exten => Park7,hint,park:871@parkedcalls
+exten => Park8,hint,park:881@parkedcalls
