--- a/exten/extensions_ivr.conf
+++ b/exten/extensions_ivr.conf
@@ -99,9 +99,18 @@ exten => _X.,n,Set(FILE=${VAL})
 exten => _X.,n,Playback(${FILE})
 exten => _X.,n,Hangup
 
-;カスタム処理を入れる場合には以下を参考に
-;切断タイマーが効いていることをお忘れなく
-[ivr-item8];FAX受信サンプル
+[ivr-item8];音声会議
+exten => _X.,1,NoOp(音声会議)
+exten => _X.,n,NoOp(会議室番号-${VAL})
+exten => _X.,n,Set(TIMEOUT(absolute)=0)
+;いきなり出ると驚くのでちょい待ち
+exten => _X.,n,Ringing(3)
+exten => _X.,n,Answer()
+exten => _X.,n,Wait(1)
+exten => _X.,n,ConfBridge(${VAL})
+exten => _X.,n,Hangup
+
+[ivr-item9];FAX受信サンプル
 exten => _X.,1,NoOp(FAX受信)
 ;タイムアウト解除
 exten => _X.,n,Set(TIMEOUT(absolute)=0)
@@ -114,9 +123,8 @@ exten => _X.,n,ReceiveFAX(/var/spool/asterisk/fax/${FID}.tif)
 exten => _X.,n,System(tiff2pdf /var/spool/asterisk/fax/${FID}.tif -o /var/spool/asterisk/fax/pdf/${FID}.pdf)
 exten => _X.,n,Hangup
 
-[ivr-item9];カスタム1
-exten => _X.,1,NoOp(カスタム1)
-exten => _X.,n,Hangup
+;カスタム処理を入れる場合には以下を参考に
+;切断タイマーが効いていることをお忘れなく
 
 [ivr-item10];カスタム2
 exten => _X.,1,NoOp(カスタム2)
