--- a/exten/extensions_keysubsys.conf
+++ b/exten/extensions_keysubsys.conf
@@ -294,7 +294,7 @@ exten => keyhandle-INUSE,n,Set(DEVICE_STATE(Custom:KEYDSP${KID})=ONHOLD)
 exten => keyhandle-INUSE,n,Gosub(macro-getpeername,s,1)
 exten => keyhandle-INUSE,n,Set(DB(KEYTEL/KEYSYS${KID}/PEER)=${CHANNEL(channeltype)}/${MPEER)})
 ;自ピア時の処理は終わり
-exten => keyhandle-INUSE,n,Hangup
+exten => keyhandle-INUSE,n(noredir),Hangup
 
 exten => keyhandle-INUSE,n(notme),NoOp
 ;もうロック解除して大丈夫なので解除しておく
