--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -557,8 +557,9 @@ exten => _X.,n(backm),Return
 
 ;Experimental
 ;メッセージングサポート
-[msgsender]
-exten => s,1,NoOp(メッセージ送信)
+;内線間送信
+[msgredir]
+exten => s,1,NoOp(メッセージ送信-中継)
 exten => s,n,NoOp(${MESSAGE(from)})
 ;Toの中身取り出し
 exten => s,n,Set(TTO=${MESSAGE(to)})
@@ -576,6 +577,17 @@ exten => s,n,Set(DSTT=sip:${TPEER}@${DSTB})
 exten => s,n,Set(EXTTECH=${TOLOWER(${EXTTECH})})
 exten => s,n,MessageSend(${EXTTECH}:${PEER},${MFROM},${DSTT})
 exten => s,n,Hangup
+;ABSからの一方的送信
+;ARG1-target peer ARG2-message body
+[sendmsg]
+exten => s,1,NoOp(メッセージ送信)
+exten => s,n,GotoIf($["${ARG1}"=""]?nodo)
+exten => s,n,GotoIf($["${ARG2}"=""]?nodo)
+exten => s,n,Set(MESSAGE(body)=${ARG2})
+exten => s,n,Set(MYDOMAIN=192.168.254.234)
+exten => s,n,Set(MYFROM=ABS-PBX)
+exten => s,n,MessageSend(pjsip:${ARG1},${MYFROM},sip:${ARG1}@${MYDOMAIN})
+exten => s,n(nodo),Return
 
 ;ゴミ箱内線
 [trashbin]
