--- a/exten/voicemail.conf
+++ b/exten/voicemail.conf
@@ -1,8 +1,7 @@
 [general]
 
 [default]
-2000 => 1234,Company Voicemail
-tz=japan
+2000 => 1234,Company Voicemail,,,Tz=japan
 
 [zonemessages]
 japan=Asia/Tokyo|'vm-received'  b d  'digits/at' HM
