--- a/exten/extensions_fap.conf
+++ b/exten/extensions_fap.conf
@@ -1,4 +1,4 @@
-;フリーアドレス処理
+;フリーアドレス端末処理
 [fap-handler]
 ;ログイン
 exten => *21,1,NoOp(FAPログイン)
@@ -44,6 +44,7 @@ exten => *21,n,Set(DB_DELETE(ABS/EXT/${EXT}/OGCID)=ignored)
 exten => *21,n,Set(DB_DELETE(ABS/EXT/${EXT})=ignored)
 exten => *21,n,Set(DB_DELETE(ABS/ERV/${BPEER})=ignored)
 exten => *21,n,Set(DB_DELETE(ABS/LMT/${BPEER})=ignored)
+exten => *21,n,Set(DEVICE_STATE(Custom:${BPEER})=NOT_INUSE)
 exten => *21,n,Playback(abs-flogout)
 ;実ログイン実行
 exten => *21,n(dlg1),NoOp
@@ -54,6 +55,7 @@ exten => *21,n,Set(DB(ABS/LMT/${MPEER})=${LMT})
 exten => *21,n(dlg2),GotoIf($["${OGCID}"=""]?dlg3)
 exten => *21,n,Set(DB(ABS/EXT/${EXT}/OGCID)=${OGCID})
 exten => *21,n(dlg3),Playback(abs-complogin)
+exten => *21,n,Set(DEVICE_STATE(Custom:${MPEER})=INUSE)
 exten => *21,n,SayDigits(${EXT})
 exten => *21,n(nogo),Wait(1)
 exten => *21,n,Hangup
@@ -85,6 +87,7 @@ exten => *23,n,Set(DB_DELETE(ABS/ERV/${MPEER})=ignored)
 exten => *23,n(lo2),GotoIf($["${MPEER}"=""]?lo3)
 exten => *23,n,Set(DB_DELETE(ABS/LMT/${MPEER})=ignored)
 exten => *23,n(lo3),NoOp
+exten => *23,n,Set(DEVICE_STATE(Custom:${MPEER})=NOT_INUSE)
 exten => *23,n,Playback(abs-logout)
 exten => *23,n,Hangup
 exten => *23,n(lo4),NoOp(ログインしていない)
@@ -114,7 +117,8 @@ exten => *22,n,Hangup
 exten => _X.,1,NoOp(FAP通常発信処理)
 exten => _X.,n,Gosub(macro-whoami,s,1)
 exten => _X.,n,GotoIf($["${ME}"=""]?nogo)
-;自ピアに内線が割当たっていれば通常内線処理
+;自ピアに内線が割当たっている
+;内線が割当たっていれば通常内線処理
 exten => _X.,n,Goto(default,${EXTEN},1)
 ;ログインしていない場合の切断
 exten => _X.,n(nogo),Answer
@@ -155,6 +159,12 @@ exten => _Park[1-8],n,GotoIf($["${ME}"=""]?nogo)
 exten => _Park[1-8],n,Goto(default,${EXTEN},1)
 exten => _Park[1-8],n(nogo),Hangup
 
+;FAP用BLFキー押下処理
+;DEVSTATEからログイン/アウトへのショートカット
+exten => _FAP0XX,1,NoOp(FAP BLFキー処理)
+exten => _FAP0XX,n,GotoIf($["${DEVICE_STATE(Custom:${EXTEN})}"="INUSE"]?*23,1)
+exten => _FAP0XX,n,Goto(*21,1)
+exten => _FAP0XX,n,Hangup
 
 ;FAP用hints
 ;注意：フリーアドレス電話機は別なcontextで動作しているので hintsもそのcontext内に設けている
@@ -187,3 +197,37 @@ exten => Park5,hint,park:851@parkedcalls
 exten => Park6,hint,park:861@parkedcalls
 exten => Park7,hint,park:871@parkedcalls
 exten => Park8,hint,park:881@parkedcalls
+
+;ログイン状態表示用Custom STATE
+exten => FAP001,hint,Custom:FAP001
+exten => FAP002,hint,Custom:FAP002
+exten => FAP003,hint,Custom:FAP003
+exten => FAP004,hint,Custom:FAP004
+exten => FAP005,hint,Custom:FAP005
+exten => FAP006,hint,Custom:FAP006
+exten => FAP007,hint,Custom:FAP007
+exten => FAP008,hint,Custom:FAP008
+exten => FAP009,hint,Custom:FAP009
+exten => FAP010,hint,Custom:FAP010
+exten => FAP011,hint,Custom:FAP011
+exten => FAP012,hint,Custom:FAP012
+exten => FAP013,hint,Custom:FAP013
+exten => FAP014,hint,Custom:FAP014
+exten => FAP015,hint,Custom:FAP015
+exten => FAP016,hint,Custom:FAP016
+exten => FAP017,hint,Custom:FAP017
+exten => FAP018,hint,Custom:FAP018
+exten => FAP019,hint,Custom:FAP019
+exten => FAP020,hint,Custom:FAP020
+exten => FAP021,hint,Custom:FAP021
+exten => FAP022,hint,Custom:FAP022
+exten => FAP023,hint,Custom:FAP023
+exten => FAP024,hint,Custom:FAP024
+exten => FAP025,hint,Custom:FAP025
+exten => FAP026,hint,Custom:FAP026
+exten => FAP027,hint,Custom:FAP027
+exten => FAP028,hint,Custom:FAP028
+exten => FAP029,hint,Custom:FAP029
+exten => FAP030,hint,Custom:FAP030
+exten => FAP031,hint,Custom:FAP031
+exten => FAP032,hint,Custom:FAP032
