--- a/exten/extensions_incoming.conf
+++ b/exten/extensions_incoming.conf
@@ -58,6 +58,15 @@ exten => s,n,Gosub(get-mydigits,s,1)
 exten => s,n,Set(DESTNUM=${DESTNUM:5:${MDIGI}})
 exten => s,n,Goto(incoming,${DESTNUM},1)
 
+;ひかり電話RTX収容スタイル
+;着信は番号で落ちてくるがToヘッダで飛ばす
+[from-hikari-rtx]
+exten => _X.,1,NoOp(ひかりRTX直収)
+exten => _X.,n,Set(DESTNUM=${PJSIP_HEADER(read,To)})
+exten => _X.,n,Gosub(get-mydigits,s,1)
+exten => _X.,n,Set(DESTNUM=${DESTNUM:5:${MDIGI}})
+exten => _X.,n,Goto(incoming,${DESTNUM},1)
+
 ;楽天OpenGate着信用前処理
 ;着番号が050なしで来るため050を付与して着信させる
 ;Smartも同じ
@@ -65,7 +74,6 @@ exten => s,n,Goto(incoming,${DESTNUM},1)
 exten => _X.,1,NoOp(OpenGate着信)
 exten => _X.,n,Set(DESTNUM=050${EXTEN})
 exten => _X.,n,Goto(incoming,${DESTNUM},1)
-
 
 ;#########################################################
 ;以下は内部処理用なので特に理由のない場合には修正しないこと
