fix connected line

--- a/exten/extensions_outgoing.conf
+++ b/exten/extensions_outgoing.conf
@@ -70,6 +70,10 @@ exten => s,n,Congestion
 exten => s,n(trunkgo),Set(TPFX=${DB(ABS/TRUNK/PFX/${TRUNK})})
 ;外線発信に変数をセット
 exten => s,n,Set(_THISPOSITION=OUTBOUND)
+;一部電話機でCONNECTEDLINEを表示に使うものがあるので設定
+exten => s,n,Set(CONNECTEDLINE(name)=${TPFX}${DESTNUM})
+exten => s,n,Set(CONNECTEDLINE(num)=${TPFX}${DESTNUM})
+exten => s,n,Set(CONNECTEDLINE(name-charset)=utf8)
 ;キーシステムを使わないのでキー連動マクロは必要なし
 ;PPIを設定するマクロは実行
 exten => s,n,Dial(${TECH}/${TPFX}${DESTNUM}@${TRUNK},,Xb(add-ppiheader^addp^1(${OGCID},${LTYP},${TECH})))
