now supports E1xx prefix out

--- a/exten/extensions_outgoing.conf
+++ b/exten/extensions_outgoing.conf
@@ -14,7 +14,7 @@ exten => _X.,n,Set(DESTNUM=${EXTEN:${PFL}})
 exten => _X.,n,GotoIf($["${DESTNUM:0:1}"="0"]?pfgo)
 ;先頭が0ではない場合にはエリアコードチェック
 exten => _X.,n,Set(AECL=${DB(ABS/AEC)})
-exten => _X.,n,GotoIf($["${AECL}"=""]?nogo)
+exten => _X.,n,GotoIf($["${AECL}"=""]?e1xx)
 exten => _X.,n,Set(CNT=1)
 exten => _X.,n(aeloop),NoOp
 exten => _X.,n,Set(TMP=${CUT(AECL,\,,${CNT})})
@@ -22,6 +22,11 @@ exten => _X.,n,GotoIf($["${TMP}"=""]?nogo)
 exten => _X.,n,GotoIf($["${DESTNUM:0:1}"="${TMP}"]?pfgo)
 exten => _X.,n,Set(CNT=$[${CNT} +1])
 exten => _X.,n,Goto(aeloop)
+;エリアコード発信でない場合にはE1xx発信をチェック
+exten => _X.,n(e1xx),GotoIf($["${DB(ABS/E1XXUSE)}"!="YES"]?nogo)
+;プレフィクスとあわせて4桁以外は発信させない
+exten => _X.,n,GotoIf($[${LEN(${EXTEN})}!=4]?nogo)
+exten => _X.,n,Goto(pfgo)
 ;発信させない
 exten => _X.,n,Goto(nogo)
 ;キーシステム迂回かどうかをチェック
