now supporting wss browser phone

--- a/exten/pjsip.conf
+++ b/exten/pjsip.conf
@@ -14,6 +14,10 @@ deny=0.0.0.0/0.0.0.0
 permit=192.168.0.0/16
 ;Some ITSP needs permit section
 
+;ブラウザフォン用トランスポート(Websocket)
+;使う場合にはコメントを外す
+;#include "pjsip_wsstransport.conf"
+
 ;#include "pjsip_trunk_hgw.conf"
 ;#include "pjsip_trunk_ogw.conf"
 ;#include "pjsip_trunk_smart.conf"
