--- a/exten/http.conf
+++ b/exten/http.conf
@@ -1,13 +1,11 @@
 [general]
-servername=Asterisk
-;enabled=yes
 enabled=no
-bindaddr=0.0.0.0
-bindport=8088
-;enablestatic=yes
-;prefix=
+;ブラウザフォンを使用する場合は以下のコメントを外すこと
+;事前に証明書類の生成と配置をお忘れなく
 ;tlsenable=yes
-;tlsbindaddr=0.0.0.0:8089
-;tlscertfile=/etc/asterisk/keys/asterisk.crt
-;tlsprivatekey=/etc/asterisk/keys/asterisk.key
-;tlscafile=/etc/asterisk/keys/ca.crt
+;tlsbindaddr=0.0.0.0:5443
+;tlscertfile=/etc/asterisk/keys/abs.crt
+;tlsprivatekey=/etc/asterisk/keys/abs.key
+;enablestatic=yes
+;sessionlimit=1000
+;redirect=/ /static/index.html
