--- a/exten/pjsip_wizard.conf
+++ b/exten/pjsip_wizard.conf
@@ -24,133 +24,540 @@ endpoint/allow_subscribe = yes
 aor/max_contacts = 2
 aor/qualify_frequency = 30
 aor/authenticate_qualify = no
+aor/remove_existing = yes
+
+;ブラウザ電話機用テンプレート(共通設定)
+;WebSocketタイプ
+[browserphone-defaults](!)
+type=wizard
+transport = transport-wss
+accepts_registrations = yes
+sends_registrations = no
+accepts_auth = yes
+sends_auth = no
+endpoint/context = default
+endpoint/dtmf_mode = rfc4733
+endpoint/call_group = 1
+endpoint/pickup_group = 1
+endpoint/language = ja
+endpoint/disallow = all
+endpoint/allow = ulaw,g722,vp8,vp9,h264
+endpoint/direct_media = no
+endpoint/rtp_timeout = 120
+endpoint/use_avpf = yes
+endpoint/ice_support = yes
+endpoint/media_encryption = dtls
+endpoint/send_pai = yes
+endpoint/send_rpid = yes
+endpoint/rewrite_contact = yes
+endpoint/inband_progress = yes
+endpoint/allow_subscribe = yes
+endpoint/rtcp_mux = yes
+endpoint/dtls_verify = fingerprint
+endpoint/dtls_setup = actpass
+endpoint/dtls_cert_file = /etc/asterisk/keys/abs.crt
+endpoint/dtls_private_key = /etc/asterisk/keys/abs.key
+endopoint/dtls_ca_file = /etc/asterisk/keys/abs.crt
+aor/max_contacts = 1
+aor/qualify_frequency = 60
+aor/authenticate_qualify = no
+aor/remove_existing = yes
 
 ;各電話機個別設定
 [phone1](phone-defaults)
 inbound_auth/username = phone1
-inbound_auth/password = 98672f375fd8df23802c308a06b5ae31
+inbound_auth/password = 8962a6b8298c728f005beb4e509f4196
 
 [phone2](phone-defaults)
 inbound_auth/username = phone2
-inbound_auth/password = 04d0753916ae65c2fe4fcbbe4f224744
+inbound_auth/password = f917311c1eb9d749b4fd5b30cfb53091
 
 [phone3](phone-defaults)
 inbound_auth/username = phone3
-inbound_auth/password = f09f8ed7a4f8e0ee6ec8dd2b3d87193c
+inbound_auth/password = c6fb7a5aba7e384fcafda52305e1e068
 
 [phone4](phone-defaults)
 inbound_auth/username = phone4
-inbound_auth/password = 7817fbb35f37deba63e2c64ef551f91f
+inbound_auth/password = ea9a177ac1dee3f1c4e5ab59d5be7f3b
 
 [phone5](phone-defaults)
 inbound_auth/username = phone5
-inbound_auth/password = f2b8f7b64b2b0c86657e34132125a826
+inbound_auth/password = 650a5f00110e91ac33445801b948453a
 
 [phone6](phone-defaults)
 inbound_auth/username = phone6
-inbound_auth/password = 192999a45dcfa2b2e7ba0aa73497a40e
+inbound_auth/password = 15095b264916f259e0022c250134cae4
 
 [phone7](phone-defaults)
 inbound_auth/username = phone7
-inbound_auth/password = 7dbc8be90cfa3f26554fae2c047b3a16
+inbound_auth/password = 134ceb7b25b8359a351f2fe580bfe406
 
 [phone8](phone-defaults)
 inbound_auth/username = phone8
-inbound_auth/password = 66d924a0096fdc279234275fbb8672cb
+inbound_auth/password = 4e1562185b66448e4d4d995a2cd7b7a4
 
 [phone9](phone-defaults)
 inbound_auth/username = phone9
-inbound_auth/password = 89f7cee0d41171212df4572f60f8fd2c
+inbound_auth/password = ba092f82e06ead3df65c0534027eb3ae
 
 [phone10](phone-defaults)
 inbound_auth/username = phone10
-inbound_auth/password = 3cd02bea0ecd6569d31bf9347dbb632a
+inbound_auth/password = bbda24ac12d96b47f3d9a766c9855ec5
 
 [phone11](phone-defaults)
 inbound_auth/username = phone11
-inbound_auth/password = a14272ae764b1f88b9afbf77f076ca23
+inbound_auth/password = 604389e3c838a053b876e94ed9039179
 
 [phone12](phone-defaults)
 inbound_auth/username = phone12
-inbound_auth/password = dc6a80ceb5f817539f475a2670442136
+inbound_auth/password = d4ab9a70f670232d3a84ab0b715d6f85
 
 [phone13](phone-defaults)
 inbound_auth/username = phone13
-inbound_auth/password = 1e43429f7f925fa9eebd609e4c050d4f
+inbound_auth/password = 96be25d65003d74d1f9cf96820be5259
 
 [phone14](phone-defaults)
 inbound_auth/username = phone14
-inbound_auth/password = e31812320735aad636873ecb4c60a17e
+inbound_auth/password = 7f781b55b0f6538398d71c754353f227
 
 [phone15](phone-defaults)
 inbound_auth/username = phone15
-inbound_auth/password = 39c912ed64525b5b82880d5c81b9d702
+inbound_auth/password = ed141e019e1469e56a3601e9f125adc7
 
 [phone16](phone-defaults)
 inbound_auth/username = phone16
-inbound_auth/password = ee8d6f8b35df3e7885ba4c7524a8f147
+inbound_auth/password = 593bcecc8d5de91f48d861be3b66fd50
 
 [phone17](phone-defaults)
 inbound_auth/username = phone17
-inbound_auth/password = 6d215b8990ccd15eba700b3eebf68546
+inbound_auth/password = 1b2a3a60aaf8974ffbbf1976c7e7bdac
 
 [phone18](phone-defaults)
 inbound_auth/username = phone18
-inbound_auth/password = 758f3ed0e467963f5a3dc4b0d8d67439
+inbound_auth/password = 0c9d10d4aa71b8bc9d7a3eca6326264c
 
 [phone19](phone-defaults)
 inbound_auth/username = phone19
-inbound_auth/password = 8008ba154c9afd2a1d15084ee763fcee
+inbound_auth/password = a32c63a4541ee221098a27a23e90d279
 
 [phone20](phone-defaults)
 inbound_auth/username = phone20
-inbound_auth/password = b4e44b12cafa3859ab8f1dbd0cb48ede
+inbound_auth/password = 974f53e05cd1cd1d2c8877b4d7f0bea8
 
 [phone21](phone-defaults)
 inbound_auth/username = phone21
-inbound_auth/password = c9439d3a65d871109ac9ad79cd60d10e
+inbound_auth/password = f092e6de0c7c1f69698e12ffc7413f92
 
 [phone22](phone-defaults)
 inbound_auth/username = phone22
-inbound_auth/password = 8d3c3b52ea0bdb752eb33e4991754925
+inbound_auth/password = 889f6ead02588cea2ddb526053c82b2b
 
 [phone23](phone-defaults)
 inbound_auth/username = phone23
-inbound_auth/password = ba1f08cd154d29cfd215be331f7478c8
+inbound_auth/password = 8082b248c441962a05bcb56127b133d6
 
 [phone24](phone-defaults)
 inbound_auth/username = phone24
-inbound_auth/password = 2f415d576ea3afa101c64120e620d5ca
+inbound_auth/password = 6aa946d5a6b71cfbcfda3b6b4e58489a
 
 [phone25](phone-defaults)
 inbound_auth/username = phone25
-inbound_auth/password = 908bb8a18944082bfb8a1dc804068a5c
+inbound_auth/password = 3a0379b89b85002d2b644dde58943f22
 
 [phone26](phone-defaults)
 inbound_auth/username = phone26
-inbound_auth/password = 873c70ca2199a6eedc15674086e5caab
+inbound_auth/password = 6f5afdf372e82e49ffdf056189f6e6fe
 
 [phone27](phone-defaults)
 inbound_auth/username = phone27
-inbound_auth/password = 7decb3b3facc5f0a31d3963420fe3c8b
+inbound_auth/password = 7cc751620a6addbd5ed942644cd059e9
 
 [phone28](phone-defaults)
 inbound_auth/username = phone28
-inbound_auth/password = 5d53acd7d5682309864535b34146c318
+inbound_auth/password = acbbe4f70414728f2ef723c9a9e2096e
 
 [phone29](phone-defaults)
 inbound_auth/username = phone29
-inbound_auth/password = 2e0f8aacdbc5b929b70021e24c921238
+inbound_auth/password = cebcb3f33b2abcf47877f7a379767bf6
 
 [phone30](phone-defaults)
 inbound_auth/username = phone30
-inbound_auth/password = aeff25dab1cf3afd096e64f7b88e8ee2
+inbound_auth/password = 357cc281630ae9918040a1a0fb6854d3
 
 [phone31](phone-defaults)
 inbound_auth/username = phone31
-inbound_auth/password = d6de65aa9bfa81b27b4d688806f0bdfb
+inbound_auth/password = 3795579d73d85db038e5c9647c5fa806
 
 [phone32](phone-defaults)
 inbound_auth/username = phone32
-inbound_auth/password = 260abcc16da3a2e84bdc53537401913c
+inbound_auth/password = ec9ce9f1f996b05471701135db8d3787
+
+;各ブラウザ電話機個別設定
+[phone33](browserphone-defaults)
+inbound_auth/username = phone33
+inbound_auth/password = 929c4332740ae8695229951b06c10fb8
+
+[phone34](browserphone-defaults)
+inbound_auth/username = phone34
+inbound_auth/password = f80784f57de91cecb28ac321366329a1
+
+[phone35](browserphone-defaults)
+inbound_auth/username = phone35
+inbound_auth/password = d6d8d24fdd4de101a1a61994eb03d11d
+
+[phone36](browserphone-defaults)
+inbound_auth/username = phone36
+inbound_auth/password = b0983fb9f2bddd90a5c2402d1c81834e
+
+[phone37](browserphone-defaults)
+inbound_auth/username = phone37
+inbound_auth/password = 2ab5da792539f67f9093d2fa30e49f82
+
+[phone38](browserphone-defaults)
+inbound_auth/username = phone38
+inbound_auth/password = 54c275821021d1263c7515692d23dbc1
+
+[phone39](browserphone-defaults)
+inbound_auth/username = phone39
+inbound_auth/password = 6895694b1caf3dc6c8c0178d711a8d57
+
+[phone40](browserphone-defaults)
+inbound_auth/username = phone40
+inbound_auth/password = 6b6df1ae3e405ac5ed045b75ef6de4db
+
+[phone41](browserphone-defaults)
+inbound_auth/username = phone41
+inbound_auth/password = 6326c5f93a32c6fe9c8677de093f4961
+
+[phone42](browserphone-defaults)
+inbound_auth/username = phone42
+inbound_auth/password = f74c51c69a02768665b7a296cdd050b6
+
+[phone43](browserphone-defaults)
+inbound_auth/username = phone43
+inbound_auth/password = 4a3dacafd45972702f3b56e3d264b8c3
+
+[phone44](browserphone-defaults)
+inbound_auth/username = phone44
+inbound_auth/password = 0de163d3f63810f048f0d655b102aa9e
+
+[phone45](browserphone-defaults)
+inbound_auth/username = phone45
+inbound_auth/password = 6363e7c6563940fbefef510a0d0c7a9d
+
+[phone46](browserphone-defaults)
+inbound_auth/username = phone46
+inbound_auth/password = dbd65660e78507baf3a1b8e808bda111
+
+[phone47](browserphone-defaults)
+inbound_auth/username = phone47
+inbound_auth/password = 8f77b20c0dd9486884d61a031cca4c86
+
+[phone48](browserphone-defaults)
+inbound_auth/username = phone48
+inbound_auth/password = 5fb1eebea9b408bae83d90fdd618b502
+
+[phone49](browserphone-defaults)
+inbound_auth/username = phone49
+inbound_auth/password = 2cb13125d2d640f18d1d29925168f5e5
+
+[phone50](browserphone-defaults)
+inbound_auth/username = phone50
+inbound_auth/password = 2d8fc6f8d74dd3a943d88d6964ae7378
+
+[phone51](browserphone-defaults)
+inbound_auth/username = phone51
+inbound_auth/password = c98e134428abaaf66ad77f591449fe15
+
+[phone52](browserphone-defaults)
+inbound_auth/username = phone52
+inbound_auth/password = 2fd2d2dbe2695bbb5a78c9f969369841
+
+[phone53](browserphone-defaults)
+inbound_auth/username = phone53
+inbound_auth/password = 8247923c8b29f8bdef95440b996c6acb
+
+[phone54](browserphone-defaults)
+inbound_auth/username = phone54
+inbound_auth/password = b6f4702b96b08c2b100c5045d985fc45
+
+[phone55](browserphone-defaults)
+inbound_auth/username = phone55
+inbound_auth/password = 293d23a46b4bc08b688dc7579cb3b611
+
+[phone56](browserphone-defaults)
+inbound_auth/username = phone56
+inbound_auth/password = 1cbf87920711b55890ddafe240749d06
+
+[phone57](browserphone-defaults)
+inbound_auth/username = phone57
+inbound_auth/password = b79aa481c5ab805c8c768073c5437d57
+
+[phone58](browserphone-defaults)
+inbound_auth/username = phone58
+inbound_auth/password = 93627834be14bf2b498ec6ded9af19f8
+
+[phone59](browserphone-defaults)
+inbound_auth/username = phone59
+inbound_auth/password = 880f2456dd57af56d2f99a9bfc8bad9f
+
+[phone60](browserphone-defaults)
+inbound_auth/username = phone60
+inbound_auth/password = b1fb3237f0429033069699098d4270a4
+
+[phone61](browserphone-defaults)
+inbound_auth/username = phone61
+inbound_auth/password = 0f6045aa540cc877d9ee55c3ef11c6e9
+
+[phone62](browserphone-defaults)
+inbound_auth/username = phone62
+inbound_auth/password = 0e642c3718514abb85b280a77c9e5660
+
+[phone63](browserphone-defaults)
+inbound_auth/username = phone63
+inbound_auth/password = 481d3767eb828ad6e30a15bd47365f99
+
+[phone64](browserphone-defaults)
+inbound_auth/username = phone64
+inbound_auth/password = b99672e8d9fb726c9fc1b32916df8294
+
+;フリーアドレス電話機個別設定
+[FAP001](phone-defaults)
+inbound_auth/username = FAP001
+inbound_auth/password = 8bf3f79f948e72b1d54f3dbcbf1317ae
+outbound_auth/username = FAP001
+outbound_auth/password = 8bf3f79f948e72b1d54f3dbcbf1317ae
+endpoint/context = fap-handler
+
+[FAP002](phone-defaults)
+inbound_auth/username = FAP002
+inbound_auth/password = aec306541a26a0a4e68d16347a4dc64e
+outbound_auth/username = FAP002
+outbound_auth/password = aec306541a26a0a4e68d16347a4dc64e
+endpoint/context = fap-handler
+
+[FAP003](phone-defaults)
+inbound_auth/username = FAP003
+inbound_auth/password = ac511e6331d96ae5f1a6049548ac2c45
+outbound_auth/username = FAP003
+outbound_auth/password = ac511e6331d96ae5f1a6049548ac2c45
+endpoint/context = fap-handler
+
+[FAP004](phone-defaults)
+inbound_auth/username = FAP004
+inbound_auth/password = 4b4f56f4cf4ed0202406006c66c7e614
+outbound_auth/username = FAP004
+outbound_auth/password = 4b4f56f4cf4ed0202406006c66c7e614
+endpoint/context = fap-handler
+
+[FAP005](phone-defaults)
+inbound_auth/username = FAP005
+inbound_auth/password = d97f3d70eac453439a40973a9eeff67f
+outbound_auth/username = FAP005
+outbound_auth/password = d97f3d70eac453439a40973a9eeff67f
+endpoint/context = fap-handler
+
+[FAP006](phone-defaults)
+inbound_auth/username = FAP006
+inbound_auth/password = e337961dee83a8f7ff1efca4135cbecb
+outbound_auth/username = FAP006
+outbound_auth/password = e337961dee83a8f7ff1efca4135cbecb
+endpoint/context = fap-handler
+
+[FAP007](phone-defaults)
+inbound_auth/username = FAP007
+inbound_auth/password = fb40b153c62ec1151e7fde07232df4b1
+outbound_auth/username = FAP007
+outbound_auth/password = fb40b153c62ec1151e7fde07232df4b1
+endpoint/context = fap-handler
+
+[FAP008](phone-defaults)
+inbound_auth/username = FAP008
+inbound_auth/password = 7318dbc17afa183f0997558a8981d85d
+outbound_auth/username = FAP008
+outbound_auth/password = 7318dbc17afa183f0997558a8981d85d
+endpoint/context = fap-handler
+
+[FAP009](phone-defaults)
+inbound_auth/username = FAP009
+inbound_auth/password = b54fb895d166bb20cfbf2cf9efb81625
+outbound_auth/username = FAP009
+outbound_auth/password = b54fb895d166bb20cfbf2cf9efb81625
+endpoint/context = fap-handler
+
+[FAP010](phone-defaults)
+inbound_auth/username = FAP010
+inbound_auth/password = f55bcb2794421fcdc59511eb2a938247
+outbound_auth/username = FAP010
+outbound_auth/password = f55bcb2794421fcdc59511eb2a938247
+endpoint/context = fap-handler
+
+[FAP011](phone-defaults)
+inbound_auth/username = FAP011
+inbound_auth/password = ce35fbe80cad22ce85e1e2ddd41dec1b
+outbound_auth/username = FAP011
+outbound_auth/password = ce35fbe80cad22ce85e1e2ddd41dec1b
+endpoint/context = fap-handler
+
+[FAP012](phone-defaults)
+inbound_auth/username = FAP012
+inbound_auth/password = 824197d65875bdc7229bf0da3295a828
+outbound_auth/username = FAP012
+outbound_auth/password = 824197d65875bdc7229bf0da3295a828
+endpoint/context = fap-handler
+
+[FAP013](phone-defaults)
+inbound_auth/username = FAP013
+inbound_auth/password = a641bad2a0be0d4d54255dde0656aaf9
+outbound_auth/username = FAP013
+outbound_auth/password = a641bad2a0be0d4d54255dde0656aaf9
+endpoint/context = fap-handler
+
+[FAP014](phone-defaults)
+inbound_auth/username = FAP014
+inbound_auth/password = b99a0013c41c1bb3b9b0d351ed13bcb3
+outbound_auth/username = FAP014
+outbound_auth/password = b99a0013c41c1bb3b9b0d351ed13bcb3
+endpoint/context = fap-handler
+
+[FAP015](phone-defaults)
+inbound_auth/username = FAP015
+inbound_auth/password = 379bbd25ecc783bdd2d41c445be8fbe3
+outbound_auth/username = FAP015
+outbound_auth/password = 379bbd25ecc783bdd2d41c445be8fbe3
+endpoint/context = fap-handler
+
+[FAP016](phone-defaults)
+inbound_auth/username = FAP016
+inbound_auth/password = 050252c185e4a2f17fcffb5ed931181d
+outbound_auth/username = FAP016
+outbound_auth/password = 050252c185e4a2f17fcffb5ed931181d
+endpoint/context = fap-handler
+
+[FAP017](phone-defaults)
+inbound_auth/username = FAP017
+inbound_auth/password = fb7218778e6e0f1c26e2a382438ca835
+outbound_auth/username = FAP017
+outbound_auth/password = fb7218778e6e0f1c26e2a382438ca835
+endpoint/context = fap-handler
+
+[FAP018](phone-defaults)
+inbound_auth/username = FAP018
+inbound_auth/password = f5aaeb38ac0876da4fb90d13bd4f65fc
+outbound_auth/username = FAP018
+outbound_auth/password = f5aaeb38ac0876da4fb90d13bd4f65fc
+endpoint/context = fap-handler
+
+[FAP019](phone-defaults)
+inbound_auth/username = FAP019
+inbound_auth/password = b0e0568102512664cf4ac8dd08f104f5
+outbound_auth/username = FAP019
+outbound_auth/password = b0e0568102512664cf4ac8dd08f104f5
+endpoint/context = fap-handler
+
+[FAP020](phone-defaults)
+inbound_auth/username = FAP020
+inbound_auth/password = d5f0816765cecef8b4a44ee82cfc5782
+outbound_auth/username = FAP020
+outbound_auth/password = d5f0816765cecef8b4a44ee82cfc5782
+endpoint/context = fap-handler
+
+[FAP021](phone-defaults)
+inbound_auth/username = FAP021
+inbound_auth/password = 0d3033f0d7deb942141eb6f39694fe65
+outbound_auth/username = FAP021
+outbound_auth/password = 0d3033f0d7deb942141eb6f39694fe65
+endpoint/context = fap-handler
+
+[FAP022](phone-defaults)
+inbound_auth/username = FAP022
+inbound_auth/password = f7eb6dde2c2bb6ee38d58547a2fa3d80
+outbound_auth/username = FAP022
+outbound_auth/password = f7eb6dde2c2bb6ee38d58547a2fa3d80
+endpoint/context = fap-handler
+
+[FAP023](phone-defaults)
+inbound_auth/username = FAP023
+inbound_auth/password = bab2890b6bfc1b1d49923b06b1a3665a
+outbound_auth/username = FAP023
+outbound_auth/password = bab2890b6bfc1b1d49923b06b1a3665a
+endpoint/context = fap-handler
+
+[FAP024](phone-defaults)
+inbound_auth/username = FAP024
+inbound_auth/password = bf3e60422ad69be62bbb0ca328a5848c
+outbound_auth/username = FAP024
+outbound_auth/password = bf3e60422ad69be62bbb0ca328a5848c
+endpoint/context = fap-handler
+
+[FAP025](phone-defaults)
+inbound_auth/username = FAP025
+inbound_auth/password = 80570127af0a7e74fb202675ba92d4de
+outbound_auth/username = FAP025
+outbound_auth/password = 80570127af0a7e74fb202675ba92d4de
+endpoint/context = fap-handler
+
+[FAP026](phone-defaults)
+inbound_auth/username = FAP026
+inbound_auth/password = ad89b0632c64050634dfdeee28840bcf
+outbound_auth/username = FAP026
+outbound_auth/password = ad89b0632c64050634dfdeee28840bcf
+endpoint/context = fap-handler
+
+[FAP027](phone-defaults)
+inbound_auth/username = FAP027
+inbound_auth/password = 0b95197062d540d332c98bc65c3d3828
+outbound_auth/username = FAP027
+outbound_auth/password = 0b95197062d540d332c98bc65c3d3828
+endpoint/context = fap-handler
+
+[FAP028](phone-defaults)
+inbound_auth/username = FAP028
+inbound_auth/password = 07a9a10aca725fc0bc102748b40c7f41
+outbound_auth/username = FAP028
+outbound_auth/password = 07a9a10aca725fc0bc102748b40c7f41
+endpoint/context = fap-handler
+
+[FAP029](phone-defaults)
+inbound_auth/username = FAP029
+inbound_auth/password = 3e860bc96c515cdd0c215eca8851a28c
+outbound_auth/username = FAP029
+outbound_auth/password = 3e860bc96c515cdd0c215eca8851a28c
+endpoint/context = fap-handler
+
+[FAP030](phone-defaults)
+inbound_auth/username = FAP030
+inbound_auth/password = 5bd00740d3679041349ad72f5e128fd7
+outbound_auth/username = FAP030
+outbound_auth/password = 5bd00740d3679041349ad72f5e128fd7
+endpoint/context = fap-handler
+
+[FAP031](phone-defaults)
+inbound_auth/username = FAP031
+inbound_auth/password = d683ab6f5dcc78091cbe7e697b997d5f
+outbound_auth/username = FAP031
+outbound_auth/password = d683ab6f5dcc78091cbe7e697b997d5f
+endpoint/context = fap-handler
+
+[FAP032](phone-defaults)
+inbound_auth/username = FAP032
+inbound_auth/password = 40d460a664540d61d74ba4f6cca00fbf
+outbound_auth/username = FAP032
+outbound_auth/password = 40d460a664540d61d74ba4f6cca00fbf
+endpoint/context = fap-handler
+
+;ビデオドアホン用(H.264 GS向け)
+[doorphone1](phone)
+username=doorphone1
+secret=9a7758651271752a72e78b7f50b44d09
+context=from-door
+callerid="ドアホン1" <5001>
+allow=ulaw,h264
+
+[doorphone2](phone)
+username=doorphone2
+secret=111a1592af4c6b0a244db3318cac372b
+context=from-door
+callerid="ドアホン2" <5002>
+allow=ulaw,h264
 
