add support for radio

--- a/exten/extensions_inhouse.conf
+++ b/exten/extensions_inhouse.conf
@@ -19,12 +19,32 @@ exten => localring,n,Goto(lp1)
 exten => trashbin,1,NoOp(ゴミ箱内線)
 exten => trashbin,n,Goto(trashbin,s,1)
 ;
-;
+;特殊内線(マルチキャストページング)
+exten => mcast1,1,NoOp(マルチキャスト・ページング)
+exten => mcast1,n,Set(LLMT=${DB(ABS/MCAST1/LMT)})
+exten => mcast1,n,GotoIf($["${LLMT}"=""]?nogo)
+exten => mcast1,n,Set(MTARGET=${DB(ABS/MCAST1/TARGET)})
+exten => mcast1,n,GotoIf($["${MTARGET}"=""]?nogo)
+;Dialで飛んでくる(Local/)ので誰がダイヤルしたかをcidnumで取る
+exten => mcast1,n,Set(MCALLER=${CALLERID(num)})
+exten => mcast1,n,Set(MCPEER=${DB(ABS/EXT/${MCALLER})})
+exten => mcast1,n,Set(MLMT=${DB(ABS/LMT/${MCPEER})})
+exten => mcast1,n,GotoIf($[${LLMT} > ${MLMT}]?nogo)
+exten => mcast1,n,Set(PREANN=${DB(ABS/MCAST1/PRE)})
+exten => mcast1,n,GotoIf($["${PREANN}"=""]?dgo1)
+exten => mcast1,n,Set(PREANN="U(${PREANN})")
+exten => mcast1,n(dgo1),Set(POSTANN=${DB(ABS/MCAST1/POST)})
+exten => mcast1,n,GotoIf($["${POSTANN}"=""]?dgo2)
+exten => mcast1,n,Set(POSTANN="F(${POSTANN})")
+exten => mcast1,n(dgo2),Dial(MulticastRTP/basic/${MTARGET}//c(ulaw),,${PREANN}${POSTANN})
+exten => mcast1,n(nogo),Hangup
+
+;内線からの発信処理ここから
 exten => _X.,1,NoOp(内線発信部)
 ; 実験的実装
 ;メッセージングサポート
 exten => _X.,n,Set(MTARGET=${EXTEN})
-exten => _X.,n,GotoIf($["${CHANNEL(name)}"="Message/ast_msg_queue"]?msgsender,s,1)
+exten => _X.,n,GotoIf($["${CHANNEL(name)}"="Message/ast_msg_queue"]?msgredir,s,1)
 ; メッセージングここまで
 
 ;外線からのブラインド転送チェック(ピア名が内線発にならないケース)
@@ -101,8 +121,21 @@ exten => _X.,n,Set(MPEER=${PEER})
 exten => _X.,n,Set(DMACRO=U(macro-markme,${KID}))
 ;ダイヤル実行
 exten => _X.,n(dodial),Gosub(macro-getexttech,s,1)
+;単独内線時は無線エンドポイントチェック
+exten => _X.,n,gosub(sub-radiocheck,s,1(${PEER}))
+exten => _X.,n,GotoIf($["${RADIOGW}"="YES"]?radiod)
+;
 exten => _X.,n,gosub(macro-rgptcheck,s,1)
+;通常ダイヤル
+exten => _X.,n,NoOp(通常内線:単独)
 exten => _X.,n,Dial(${EXTTECH}/${PEER},${TMO},${DMACRO}${OPT}b(multi-macros^s^1(macro-setringpattern,${RGPT},selfpark-handler,s)))
+exten => _X.,n,Hangup
+;無線ゲートウェイダイヤル
+exten => _X.,n(radiod),NoOp(無線GW呼び出し)
+exten => _X.,n,Set(__GWENDP=${RENDP})
+exten => _X.,n,Set(CHANNEL(hangup_handler_push)=sub-pttctl,s,1("NETPTT:OFF"))
+exten => _X.,n,Set(__DYNAMIC_FEATURES=pttctl)
+exten => _X.,n,Dial(${EXTTECH}/${PEER},${TMO},${DMACRO}${OPT})
 exten => _X.,n,Hangup
 ;内線グループへダイヤル
 exten => _X.,n(group),NoOp(内線グループ)
