--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -646,5 +646,50 @@ exten => s,n,Set(SQL="CREATE TABLE abslog (ID INTEGER PRIMARY KEY AUTOINCREMENT,
 exten => s,n,System(echo ${SQL} | sqlite3 ${DBF} >> /tmp/absrot.log 2>&1 )
 exten => s,n,Hangup
 
+;ページング時のチャイム例
+[sub-chimeup]
+exten => s,1,Wait(1)
+exten => s,n,Playtones(!523/300,!659/300,!783/300,!1046/300)
+exten => s,n,Wait(2)
+exten => s,n,Return
+;ページング終了時例
+;終了時はF()オプションでここへ転送されるのでHangupで終了すること
+[sub-chimedown]
+exten => s,1,Answer
+exten => s,n,Wait(1)
+exten => s,n,Playtones(!1046/300,!783/300,!659/300,!523/300)
+exten => s,n,Wait(2)
+exten => s,n,Hangup
+
+;
+; 無線機接続エンドポイントかのチェック
+;
+[sub-radiocheck]
+exten => s,1,NoOp(無線機ゲートウェイチェック)
+exten => s,n,Set(RADIOGW=)
+;CONTACTSから先頭のエンドポイント名だけ取り出し
+exten => s,n,Set(RENDP=${CUT(ARG1,/,1)})
+exten => s,n,Set(RLIST=${DB(ABS/RADIOGW)})
+exten => s,n,Set(NRET=${FIELDNUM(RLIST,\,,${RENDP})})
+exten => s,n,GotoIf($["${NRET}"="0"]?ret)
+exten => s,n,Set(RADIOGW=YES)
+exten => s,n(ret),Return
+
+;
+; 無線機接続時のPTT制御
+; ARG1:ON/OFF/ALT
+; GWENDP:ゲートウェイのエンドポイント名(注:__でメインのダイヤルプランで指定)
+; 無線機ゲートウェイのIPアドレスはエンドポイントから求める
+;
+[sub-pttctl]
+exten => s,1,NoOp(PTT制御)
+exten => s,n,Set(TARGET=${GWENDP})
+exten => s,n,Set(RCONTACT=${PJSIP_DIAL_CONTACTS(${TARGET})})
+exten => s,n,Set(RCONTACT=${CUT(RCONTACT,@,2)})
+exten => s,n,Set(RCONTACT=${CUT(RCONTACT,:,1)})
+exten => s,n,System(echo ${ARG1} | /usr/bin/nc ${RCONTACT} 5091)
+exten => s,n,Morsecode(E)
+exten => s,n,Return
+
 ;着信音選択用マクロ
 #include ringpattern_defs.conf
