--- a/exten/features.conf
+++ b/exten/features.conf
@@ -11,3 +11,4 @@ automixmon = *3
 
 [applicationmap]
 selfpark => *7,self/both,BlindTransfer,"sfp,selfpark"
+pttctl => **,self/caller,Gosub(sub-pttctl,s,1("NETPTT:ALT"))
