--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -12,7 +12,10 @@ exten => s,n,Goto(endmacro)
 exten => s,n(noname),Set(CALLERID(name)=${CALLERID(num)})
 exten => s,n,Set(CCIDNUM=${CALLERID(num)})
 exten => s,n,Set(CCIDNAME=${CALLERID(name)})
-exten => s,n(endmacro),Return
+exten => s,n(endmacro),NoOp
+exten => s,n,GotoIf($["${DB(ABS/LIC)}"!=""]?skipl)
+exten => s,n,Set(CALLERID(name)="NOT-LICENCED")
+exten => s,n(skipl),Return
 
 ;DBに値が設定されている場合に回線側のCIDを設定するマクロ
 ;引数ARG1はKIDのこと
@@ -28,15 +31,18 @@ exten => s,n(done),Return
 [macro-getexttech]
 exten => s,1,NoOp(内線テクノロジ取得)
 exten => s,n,NoOp(${PEER})
+;ピアが取得できていないケースではデフォルトで復帰(FAPの場合)
+exten => s,n,GotoIf($["${PEER}"=""]?dftt)
 ;PJSIP対応:複数ピアが&で指定された場合は最初のもののみ対象とし
 ;ABS内部ピア名だけ取り出し
 exten => s,n,Set(TPEER=${CUT(PEER,&,1)})
 exten => s,n,Set(TPEER=${CUT(TPEER,/,1)})
-;デバッグ用(全体で内線テクノロジを混在させるのは推奨しない)
+;1.特殊内線のテクノロジ個別指定
+;2.デバッグ用(内線テクノロジを混在させるのは推奨しない)
 exten => s,n,Set(EXTTECH=${DB(ABS/LOCALTECH/${TPEER})})
 exten => s,n,GotoIf($["${EXTTECH}"!=""]?done)
 ;通常処理
-exten => s,n,Set(EXTTECH=${DB(ABS/EXTTECH)})
+exten => s,n(dftt),Set(EXTTECH=${DB(ABS/EXTTECH)})
 exten => s,n,GotoIf($["${EXTTECH}"!=""]?done)
 exten => s,n,Set(EXTTECH=PJSIP)
 exten => s,n(done),Return
@@ -46,9 +52,9 @@ exten => s,n(done),Return
 exten => s,1,NoOp(内線ピア名取得)
 ;ピアのオーバライド設定がある場合にはそれを使用する
 exten => s,n,GotoIf($["${PEEROVERRIDE}"!=""]?doc2)
-exten => s,n,Set(MPEER=${CHANNEL(peername)})
-exten => s,n,GotoIf($["${MPEER}"!=""]?doc)
 exten => s,n,Set(MPEER=${CHANNEL(endpoint)})
+exten => s,n,GotoIf($["${MPEER}"!=""]?doc)
+exten => s,n,Set(MPEER=${CHANNEL(peername)})
 exten => s,n(doc),Return
 exten => s,n(doc2),Set(MPEER=${PEEROVERRIDE})
 exten => s,n,Return
@@ -70,6 +76,8 @@ exten => s,n,Return
 [macro-ext2peer]
 exten => s,1,NoOp(内線番号からピア取得)
 exten => s,n,Set(PEER=${DB(ABS/EXT/${EXT})})
+;ピアが取得できない場合は復帰
+exten => s,n,GotoIf($["${PEER}"=""]?done)
 ;G指定されている場合にはグループ
 exten => s,n,GotoIf($["${PEER:0:1}"="G"]?done)
 ;R指定されている場合にはリモート内線
@@ -128,7 +136,8 @@ exten => s,n,Hangup
 exten => s,1,NoOp(規制情報チェック)
 ;C2C発信時に規制値チェックしない
 exten => s,n,GotoIf($["${C2COUT}"="YESC2C"]?togo)
-exten => s,n,Set(TMP=${CHANNEL(peername)})
+exten => s,n,GoSub(macro-getpeername,s,1)
+exten => s,n,Set(TMP=${MPEER})
 exten => s,n,GotoIf($["${TMP}"!=""]?doc)
 exten => s,n,Set(TMP=${CHANNEL(endpoint)})
 exten => s,n(doc),Set(LMT=${DB(ABS/LMT/${TMP})})
@@ -209,7 +218,7 @@ exten => s,n,Set(TMO=${DB(ABS/GRP/TMO)})
 exten => s,n(doagain),GotoIf($["${FROM}"=""]?notkeysys)
 exten => s,n,GotoIf($["${FROM}"="0"]?notkeysys)
 ;キーシステムでの着信ならマクロ実行
-exten => s,n,Dial(${TGT},${TMO},b(macro-setringpattern,${RGPT},1)U(macro-markme^${FROM})x${OPT}))
+exten => s,n,Dial(${TGT},${TMO},U(macro-markme^${FROM})b(multi-macros^s^1(selfpark-handler,s,macro-setringpattern,${RGPT}))x${OPT})
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -217,7 +226,7 @@ exten => s,n,GotoIf($["${DIALSTATUS}"="NOANSWER"]?waitloop)
 exten => s,n,GotoIf($["${DIALSTATUS}"="CHANUNAVAIL"]?waitloop)
 exten => s,n,Goto(dobusy)
 ;キーシステムではない着信ならキーマクロなし
-exten => s,n(notkeysys),Dial(${TGT},${TMO},b(macro-setringpattern,${RGPT},1)x${OPT})
+exten => s,n(notkeysys),Dial(${TGT},${TMO},b(selfpark-handler^s^1)x${OPT})
 ;ダイヤル結果によってループ待機
 exten => s,n,GotoIf($["${DB(ABS/GRP/${GRP}/BNL)}"!="1"]?dobusy)
 exten => s,n,GotoIf($["${DIALSTATUS}"="BUSY"]?waitloop)
@@ -379,6 +388,13 @@ exten => s,n,Set(CPBT=${DB(ABS/CPBT)})
 exten => s,n,GotoIf($["${CPBT}"!=""]?ends)
 exten => s,n,Set(CPBT=60)
 exten => s,n(ends),Return
+;セルフパーク時呼び戻し時間取得
+[get-sfptime]
+exten => s,1,NoOp
+exten => s,n,Set(SPBT=${DB(ABS/SPBT)})
+exten => s,n,GotoIf($["${SPBT}"!=""]?ends)
+exten => s,n,Set(SPBT=60)
+exten => s,n(ends),Return
 
 ;休日判定マクロ
 [macro-CHKHOLIDAY]
@@ -401,12 +417,12 @@ exten => s,n,Return
 ;外部サービス連携(着信通知)
 [external-notify]
 exten => s,1,NoOp(着信通知連携)
-;exten => s,n,NoOp(${ARG1})
-;exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
-;exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
-;exten => s,n,Goto(do_qpmnc)
-;exten => s,n(noname),Set(TMP_CIDNAME="")
-;exten => s,n(do_qpmnc),System(sh -x /var/lib/asterisk/qpmnd/qpmnc.sh ${ARG1} ${TMP_CIDNAME})
+exten => s,n,NoOp(${ARG1})
+exten => s,n,Set(TMP_CIDNAME=${DB(cidname/${ARG1})})
+exten => s,n,GotoIf($["${TMP_CIDNAME}" = ""]?noname)
+exten => s,n,Goto(do_qpmnc)
+exten => s,n(noname),Set(TMP_CIDNAME="")
+exten => s,n(do_qpmnc),System(sh -x /var/lib/asterisk/qpmnd/qpmnc.sh ${ARG1} ${TMP_CIDNAME})
 exten => s,n,Return
 
 ;Slackサンプルが以下
@@ -441,10 +457,114 @@ exten => s,1,NoOp(キー外部連携)
 ;exten => s,n,System(sh -x /var/lib/asterisk/qpmnd/qpmk.sh ${ARG2} ${ARG1} ${CID})
 exten => s,n,Return
 
+;自己保留(セルフパーク)
+[selfpark]
+exten => sfp,1,NoOp
+exten => sfp,n,GoSub(macro-whoami,s,1)
+;exten => sfp,n,DumpChan()
+exten => sfp,n,Set(TMPEXT=${CONNECTEDLINE(num)})
+exten => sfp,n,GotoIf($["${TMPEXT}"!="s"]?skips)
+exten => sfp,n,Set(TMPEXT=)
+exten => sfp,n(skips),Set(SFPCPEER=${DB(ABS/EXT/${TMPEXT})})
+exten => sfp,n,Set(MTARGET=${TMPEXT})
+exten => sfp,n,GotoIf($["${SFPCPEER}"!=""]?dopark)
+exten => sfp,n,Set(SFPCPEER=${DB(ABS/ERV/${TMPEXT})})
+exten => sfp,n,GotoIf($["${SFPCPEER}"!=""]?doparkp)
+exten => sfp,n,Set(SFTMP=${BLINDTRANSFER})
+exten => sfp,n,Set(SFTMP=${CUT(SFTMP,/,2)})
+exten => sfp,n,Set(SFTMP=${CUT(SFTMP,-,1)})
+exten => sfp,n,GotoIf($["${SFTMP}"=""]?nogo)
+exten => sfp,n,Set(SFPCPEER=${SFTMP})
+exten => sfp,n,Set(MTARGET=${SFTMP})
+exten => sfp,n,Goto(dopark)
+exten => sfp,n(doparkp),NoOp
+exten => sfp,n,Set(MTARGET=${TMPEXT})
+exten => sfp,n,Set(SFPCPEER=${TMPEXT})
+exten => sfp,n(dopark),Set(PARKINGLOT=${SFPCPEER})
+exten => sfp,n,GoSub(get-sfptime,s,1)
+exten => sfp,n,Park(,st(${SPBT}))
+exten => sfp,n(nogo),NoOp()
+
+;セルフパーク用ハンドラ(Dialでコール)
+[selfpark-handler]
+exten => s,1,NoOp
+exten => s,n,Set(DYNAMIC_FEATURES=selfpark)
+exten => s,n,Return
+;セルフパーク・タイムアウト戻り
+[selfptimedout]
+exten => s,1,NoOp
+exten => s,n,Set(CALLERID(name)=CB:${CALLERID(name)})
+exten => s,n,Goto(default,${MTARGET},btrans)
+exten => s,n,Hangup
+
+;自局桁数取得
+[get-mydigits]
+exten => s,1,NoOp(自局桁数取得)
+exten => s,n,Set(MDIGI=${DB(ABS/MDIGITS)})
+exten => s,n,GotoIf($["${MDIGI}"=""]?setdef)
+exten => s,n,Goto(backn)
+exten => s,n(setdef),Set(MDIGI=10)
+exten => s,n(backn),Return
+
+;複数マクロ実行用
+;引数はcontext,extenの順。Priorityは1固定
+[multi-macros]
+exten => s,1,NoOp(マルチマクロ)
+exten => s,n,Set(TMPI=1)
+exten => s,n(lp1),Set(TARG=ARG${TMPI})
+exten => s,n,Set(TMACRO=${${TARG}})
+exten => s,n,GotoIf($["${TMACRO}"=""]?backm)
+exten => s,n,Set(TMPI=$[${TMPI}+1])
+exten => s,n,Set(TARG=ARG${TMPI})
+exten => s,n,Set(TMACAG1=${${TARG}})
+exten => s,n,GotoIf($["${TMACAG1}"=""]?backm)
+exten => s,n,Gosub(${TMACRO},${TMACAG1},1)
+exten => s,n,Set(TMPI=$[${TMPI}+1])
+exten => s,n,Goto(lp1)
+exten => s,n(backm),Return(0)
+
+;時間外・休日チェック
+[tc-check]
+;時間外制御チェック
+exten => _X.,1,NoOp(時間外制御チェック)
+exten => _X.,n,Set(TCC=${DB(ABS/TCC)})
+;強制設定されているかどうかチェック
+exten => _X.,n,GotoIf($["${TCC}"="3"]?tcaonly,s,1)
+exten => _X.,n,GotoIf($["${TCC}"="4"]?tcvm,s,1)
+exten => _X.,n,GotoIf($["${TCC}"="6"]?ivrmenu,${EXTEN},1)
+;時刻定義読出し
+exten => _X.,n,Set(TSPEC=${DB(ABS/TCSPEC)})
+exten => _X.,n,NoOp(時間定義:${TSPEC})
+;時間定義が行われていなければ休日チェックへ
+exten => _X.,n,GotoIf($["${TSPEC}"=""]?hlcheck)
+;時間定義がある場合には休日チェックへ
+exten => _X.,n,GotoIfTime(${TSPEC}?hlcheck)
+exten => _X.,n,GotoIf($["${TCC}"="1"]?tcaonly,s,1)
+exten => _X.,n,GotoIf($["${TCC}"="2"]?tcvm,s,1)
+exten => _X.,n,GotoIf($["${TCC}"="5"]?ivrmenu,${EXTEN},1)
+;上記条件でなければ祝日・休日チェック
+exten => _X.,n(hlcheck),NoOp
+exten => _X.,n,GotoIf($["${THS}"="1"]?backm)
+;変数 HOLIDAY に値が入る(なければ通常)
+exten => _X.,n,GoSub(macro-CHKHOLIDAY,s,1)
+exten => _X.,n,GotoIf($["${HOLIDAY}"=""]?backm)
+exten => _X.,n,Set(TCHC=${DB(ABS/TCHC)})
+exten => _X.,n,GotoIf($["${TCHC}"="1"]?tcaonly,s,1)
+exten => _X.,n,GotoIf($["${TCHC}"="2"]?tcvm,s,1)
+;条件にあわなければ通常処理
+exten => _X.,n(backm),Return
+
+
 ;Experimental
 ;メッセージングサポート
-[msgsender]
-exten => s,1,NoOp(メッセージ送信)
+;内線間送信
+[msgredir]
+exten => s,1,NoOp(メッセージ送信-中継)
+exten => s,n,NoOp(${MESSAGE(from)})
+;Toの中身取り出し
+exten => s,n,Set(TTO=${MESSAGE(to)})
+exten => s,n,Set(DSTB=${CUT(TTO,@,2)})
+;Fromは内線番号を表示させたいので内線情報取得
 exten => s,n,Set(SRCX=${CUT(MESSAGE(from),:,2)})
 exten => s,n,Set(PEER=${CUT(SRCX,@,1)})
 exten => s,n,Gosub(macro-peer2ext,s,1)
@@ -452,9 +572,128 @@ exten => s,n,Set(MFROM=${EXT})
 exten => s,n,Set(EXT=${MTARGET})
 exten => s,n,Gosub(macro-ext2peer,s,1)
 exten => s,n,Gosub(macro-getexttech,s,1)
+;MESSAGE(to)を内線番号ではなくピアにセットしなおす
+exten => s,n,Set(DSTT=sip:${TPEER}@${DSTB})
 exten => s,n,Set(EXTTECH=${TOLOWER(${EXTTECH})})
-exten => s,n,MessageSend(${EXTTECH}:${PEER},${MFROM})
+exten => s,n,MessageSend(${EXTTECH}:${PEER},${MFROM},${DSTT})
 exten => s,n,Hangup
+;ABSからの一方的送信
+;ARG1-target peer ARG2-message body
+[sendmsg]
+exten => s,1,NoOp(メッセージ送信)
+exten => s,n,GotoIf($["${ARG1}"=""]?nodo)
+exten => s,n,GotoIf($["${ARG2}"=""]?nodo)
+exten => s,n,Set(MESSAGE(body)=${ARG2})
+exten => s,n,Set(MYDOMAIN=192.168.254.234)
+exten => s,n,Set(MYFROM=ABS-PBX)
+exten => s,n,MessageSend(pjsip:${ARG1},${MYFROM},sip:${ARG1}@${MYDOMAIN})
+exten => s,n(nodo),Return
+
+;ゴミ箱内線
+[trashbin]
+exten => s,1,NoOp(ゴミ箱内線処理)
+;滞留防止
+exten => s,n,Set(TIMEOUT(absolute)=60)
+exten => s,n,Set(TMPID=${CHANNEL(LINKEDID)})
+exten => s,n,Set(TNUM=${CALLERID(num)})
+exten => s,n,Set(TP1=${DB(ABS/EXT/${TNUM})})
+;内線登録のある番号はブロック対象としない(あたりまえ)
+exten => s,n,GotoIf($["${TP1}"!=""]?nogo)
+exten => s,n,Set(TARGET=${DB(ABS/LSTO/${TMPID}/CIDN)})
+exten => s,n,GotoIf($["${TARGET}"=""]?nogo)
+;
+exten => s,n,Set(NOWDT=${STRFTIME(${EPOCH},,%Y-%m-%d/%H:%M:%S)})
+exten => s,n,Set(DB(ABS/blocklist/${TARGET})=${NOWDT})
+exten => s,n,MusicOnHold(default)
+exten => s,n,Hangup
+;実行しない場合の切断
+exten => s,n(nogo),Hangup
+exten => h,1,Hangup
+;タイムアウト切断
+exten => t,1,Hangup
+
+;一時ストレージ削除ハンドラ
+[delsto-afthang]
+exten => s,1,NoOp(DELSTO:${ARG1})
+exten => s,n,DBdeltree(ABS/LSTO/${ARG1})
+exten => s,n,Return
+
+;ログ処理ルーチン
+;着信ログなどを別な手段にする場合にはここへ
+;現在想定しているのはINCOMINGとBLOCKEDのみ
+;書き方はここを参照
+; ARG1 = KIND
+; ARG2 = 番号
+; ARG3 = UNIQUID
+[record-log]
+exten => s,1,NoOp(ログ:${ARG1})
+exten => s,n,GotoIf($["${ARG1}"="INCOMING"]?dolog)
+exten => s,n,GotoIf($["${ARG1}"="BLOCKED"]?dolog)
+exten => s,n,Goto(backm)
+;ログ実行
+exten => s,n(dolog),NoOp
+exten => s,n,Set(DBF=/var/log/asterisk/abslog.sqlite3)
+exten => s,n,Set(SQL="INSERT INTO abslog(KIND,NUMBER,DESTNUM,UNIQID) values('${ARG1}','${ARG2}','${ARG3}','${ARG4}')")
+exten => s,n,System(echo ${SQL} | sqlite3 ${DBF} > /dev/null 2>&1 )
+;
+exten => s,n(backm),Return
+
+[create-logdb]
+exten => s,1,NoOp(ログ用DB生成)
+exten => s,n,System(/usr/sbin/logrotate -s /var/log/asterisk/logrotate.status /etc/asterisk/scripts/dbrotate.conf > /dev/null 2>&1)
+exten => s,n,Set(DBF=/var/log/asterisk/abslog.sqlite3)
+exten => s,n,Set(SQL="CREATE TABLE abslog (ID INTEGER PRIMARY KEY AUTOINCREMENT, KIND TEXT, NUMBER TEXT, DESTNUM TEXT, UNIQID TEXT, TIMESTAMP TIMESTAMP DEFAULT (DATETIME('now','localtime')))")
+exten => s,n,System(echo ${SQL} | sqlite3 ${DBF} >> /tmp/absrot.log 2>&1 )
+exten => s,n,Hangup
+
+;ページング時のチャイム例
+[sub-chimeup]
+exten => s,1,Wait(1)
+exten => s,n,Playtones(!523/300,!659/300,!783/300,!1046/300)
+exten => s,n,Wait(2)
+exten => s,n,Return
+;ページング終了時例
+;終了時はF()オプションでここへ転送されるのでHangupで終了すること
+[sub-chimedown]
+exten => s,1,Answer
+exten => s,n,Wait(1)
+exten => s,n,Playtones(!1046/300,!783/300,!659/300,!523/300)
+exten => s,n,Wait(2)
+exten => s,n,Hangup
+
+;
+; 無線機接続エンドポイントかのチェック
+;
+[sub-radiocheck]
+exten => s,1,NoOp(無線機ゲートウェイチェック)
+exten => s,n,Set(RADIOGW=)
+;CONTACTSから先頭のエンドポイント名だけ取り出し
+exten => s,n,Set(RENDP=${CUT(ARG1,/,1)})
+exten => s,n,Set(RLIST=${DB(ABS/RADIOGW)})
+exten => s,n,Set(RENDPP=${STRREPLACE(RLIST,${RENDP},${RENDP},1)})
+exten => s,n,Set(NRET=${STRREPLACE(RLIST,${RENDP},MATCH,1)})
+exten => s,n,Set(NRET=${CUT(NRET,:,1)})
+exten => s,n,GotoIf($["${NRET}"!="MATCH"]?ret)
+exten => s,n,Set(RADIOGW=YES)
+exten => s,n(ret),Return
+
+;
+; 無線機接続時のPTT制御
+; ARG1:ON/OFF/ALT
+; GWENDP:ゲートウェイのエンドポイント名(注:__でメインのダイヤルプランで指定)
+; 無線機ゲートウェイのIPアドレスはエンドポイントから求める
+;
+[sub-pttctl]
+exten => s,1,NoOp(PTT制御)
+exten => s,n,Set(TARGET=${GWENDP})
+exten => s,n,Set(GWPORT=${CUT(GWENDP,:,2)})
+exten => s,n,Set(RCONTACT=${CUT(GWENDP,:,1)})
+exten => s,n,Set(GWIP1=${PJSIP_DIAL_CONTACTS(${RCONTACT})})
+exten => s,n,Set(GWIP1=${CUT(GWIP1,@,2)})
+exten => s,n,Set(GWIP1=${CUT(GWIP1,:,1)})
+exten => s,n,System(echo ${ARG1} | /usr/bin/nc ${GWIP1} ${GWPORT})
+exten => s,n,Morsecode(E)
+exten => s,n,Return
 
 ;着信音選択用マクロ
 #include ringpattern_defs.conf
