--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -670,8 +670,10 @@ exten => s,n,Set(RADIOGW=)
 ;CONTACTSから先頭のエンドポイント名だけ取り出し
 exten => s,n,Set(RENDP=${CUT(ARG1,/,1)})
 exten => s,n,Set(RLIST=${DB(ABS/RADIOGW)})
-exten => s,n,Set(NRET=${FIELDNUM(RLIST,\,,${RENDP})})
-exten => s,n,GotoIf($["${NRET}"="0"]?ret)
+exten => s,n,Set(RENDPP=${STRREPLACE(RLIST,${RENDP},${RENDP},1)})
+exten => s,n,Set(NRET=${STRREPLACE(RLIST,${RENDP},MATCH,1)})
+exten => s,n,Set(NRET=${CUT(NRET,:,1)})
+exten => s,n,GotoIf($["${NRET}"!="MATCH"]?ret)
 exten => s,n,Set(RADIOGW=YES)
 exten => s,n(ret),Return
 
@@ -684,10 +686,12 @@ exten => s,n(ret),Return
 [sub-pttctl]
 exten => s,1,NoOp(PTT制御)
 exten => s,n,Set(TARGET=${GWENDP})
-exten => s,n,Set(RCONTACT=${PJSIP_DIAL_CONTACTS(${TARGET})})
-exten => s,n,Set(RCONTACT=${CUT(RCONTACT,@,2)})
-exten => s,n,Set(RCONTACT=${CUT(RCONTACT,:,1)})
-exten => s,n,System(echo ${ARG1} | /usr/bin/nc ${RCONTACT} 5091)
+exten => s,n,Set(GWPORT=${CUT(GWENDP,:,2)})
+exten => s,n,Set(RCONTACT=${CUT(GWENDP,:,1)})
+exten => s,n,Set(GWIP1=${PJSIP_DIAL_CONTACTS(${RCONTACT})})
+exten => s,n,Set(GWIP1=${CUT(GWIP1,@,2)})
+exten => s,n,Set(GWIP1=${CUT(GWIP1,:,1)})
+exten => s,n,System(echo ${ARG1} | /usr/bin/nc ${GWIP1} ${GWPORT})
 exten => s,n,Morsecode(E)
 exten => s,n,Return
 
