fix radio control

--- a/exten/extensions_inhouse.conf
+++ b/exten/extensions_inhouse.conf
@@ -132,7 +132,7 @@ exten => _X.,n,Dial(${EXTTECH}/${PEER},${TMO},${DMACRO}${OPT}b(multi-macros^s^1(
 exten => _X.,n,Hangup
 ;無線ゲートウェイダイヤル
 exten => _X.,n(radiod),NoOp(無線GW呼び出し)
-exten => _X.,n,Set(__GWENDP=${RENDPP})
+exten => _X.,n,Set(__GWENDP=${GWENDP})
 exten => _X.,n,Set(CHANNEL(hangup_handler_push)=sub-pttctl,s,1("NETPTT:OFF"))
 exten => _X.,n,Set(__DYNAMIC_FEATURES=pttctl)
 exten => _X.,n,Dial(${EXTTECH}/${PEER},${TMO},${DMACRO}${OPT})
