--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -663,18 +663,20 @@ exten => s,n,Hangup
 
 ;
 ; 無線機接続エンドポイントかのチェック
+; TPEER:ダイヤル先エンドポイント
 ;
 [sub-radiocheck]
 exten => s,1,NoOp(無線機ゲートウェイチェック)
 exten => s,n,Set(RADIOGW=)
-;CONTACTSから先頭のエンドポイント名だけ取り出し
-exten => s,n,Set(RENDP=${CUT(ARG1,/,1)})
 exten => s,n,Set(RLIST=${DB(ABS/RADIOGW)})
-exten => s,n,Set(RENDPP=${STRREPLACE(RLIST,${RENDP},${RENDP},1)})
-exten => s,n,Set(NRET=${STRREPLACE(RLIST,${RENDP},MATCH,1)})
-exten => s,n,Set(NRET=${CUT(NRET,:,1)})
-exten => s,n,GotoIf($["${NRET}"!="MATCH"]?ret)
-exten => s,n,Set(RADIOGW=YES)
+exten => s,n,Set(TMP1=1)
+exten => s,n(lp1),NoOp
+exten => s,n,Set(GWENDP=${CUT(RLIST,\,,${TMP1})})
+exten => s,n,GotoIf($["${GWENDP}"=""]?ret)
+exten => s,n,Set(TMPTE=${CUT(GWENDP,:,1)})
+exten => s,n,GotoIf($["${TPEER}"="${TMPTE}"]?isgw)
+exten => s,n,Goto(lp1)
+exten => s,n(isgw),Set(RADIOGW=YES)
 exten => s,n(ret),Return
 
 ;
