avoid forever loop

--- a/exten/extensions_macros.conf
+++ b/exten/extensions_macros.conf
@@ -675,6 +675,7 @@ exten => s,n,Set(GWENDP=${CUT(RLIST,\,,${TMP1})})
 exten => s,n,GotoIf($["${GWENDP}"=""]?ret)
 exten => s,n,Set(TMPTE=${CUT(GWENDP,:,1)})
 exten => s,n,GotoIf($["${TPEER}"="${TMPTE}"]?isgw)
+exten => s,n,Set(TMP1=${INC(TMP1)})
 exten => s,n,Goto(lp1)
 exten => s,n(isgw),Set(RADIOGW=YES)
 exten => s,n(ret),Return
